# SecAuditAI

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  TOOLS_REVIEW.md  config.example.yaml  docker-compose.yml  psutil.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  setup_dev.bat  setup_dev.sh  venv-python
docker/: __init__.py
docs/: ai_code_review.md  api.md  llm_training.md  model_training.md  troubleshooting.md  user_guide.md
docs/datasets/: README.md
docs/examples/: README.md  advanced_usage.py  api_scanning.py  basic_scan.py  basic_usage.py  cloud_scanning.py  code_scanning.py  compliance_checks.py  container_scanning.py  container_security.py  custom_rules.py  hybrid_cloud_scanning.py  iac_scanning.py  iac_security_scanning.py  image_security_scanning.py  multi_cloud_scanning.py  real_time_monitoring.py  sbom_generation.py  webhook_integration.py  (+1 more)
scripts/: convert_datasets.py  generate_training_data.py  prepare_training_data.py  train_zero_day_models.py
sec_requests/: __init__.py
secauditai/: __init__.py  cli.py  config.py  experimental.py  monitor.py  monitoring.py  realtime.py  reporting.py  reports.py  tui.py  utils.py  zero_day.py
tests/: __init__.py  test_cloud_scanner.py  test_code_scanner.py  test_experimental_features.py  test_hybrid_cloud_scanner.py  test_iac_scanner.py  test_image_scanner.py  test_monitor.py  test_monitoring.py  test_multi_cloud_scanner.py  test_real_time_monitoring.py  test_reporting.py  test_reports.py  test_sbom_scanner.py  test_scanners.py  test_utils.py  test_zero_day_detection.py
(+51 files in other folders)
